--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-calendar": "^6.0.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
+    "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
     "recharts": "^3.3.0",
     "zod": "^4.1.11"
