--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "html5-qrcode": "^2.3.8",
     "libphonenumber-js": "^1.12.18",
     "lucide-react": "^0.545.0",
-    "next": "15.5.3",
-    "react": "19.1.0",
+    "next": "^16.1.6",
+    "react": "^19.2.4",
     "react-apexcharts": "^1.8.0",
     "react-calendar": "^6.0.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.4",
     "react-hook-form": "^7.63.0",
     "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
